...
        style={{
          flexDirection: 'row',
          justifyContent: 'flex-end',
          flex: 1,
        }}>
        <IconBadge badgeCount={savedWords.length} color={colors.buttonColor} size={sizes.topBar}>
          <Pressable onPress={onPressShowWordList} testID="show-word-list-button">
            <View
              style={{
                paddingVertical: 5,
                paddingHorizontal: 10,
                borderRadius: sizes.borderRadius,
                borderWidth: 2,
                borderColor: colors.buttonTextColor,
                alignItems: 'center',
              }}>
              <Text allowFontScaling={false} style={textStyles.smallDark}>
                {`カナ`}
              </Text>
            </View>
          </Pressable>
        </IconBadge>
      </View>
    </View>
...
